--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "cashwise",
   "version": "0.0.1",
   "dependencies": {
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "appcache-node": "~0.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
